feat(event-repository): Improve multi-day event handling and participant assignment
- Refactor getEventsForDay() to properly handle multi-day timed events with distinct behavior for start day, intermediate days, and end day
- Display start day of multi-day events with original start time
- Render intermediate days as all-day events (00:00–00:00) since the entire day is contained
- Show end day from 00:00 with the original end time
- Restrict participant auto-assignment to CALENDAR source events only, excluding school calendars and holidays
- Update method references from method references to lambda expressions for consistency
- Improve documentation with detailed examples of multi-day event handling logic
- Add comprehensive JavaDoc explaining the new multi-day event behavior and edge cases